--- a/index.html
+++ b/index.html
@@ -39,9 +39,55 @@
                     <li class="nav-item"><a class="nav-link" href="./contactus.html"><span
                                 class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>
+
+                <span class="navbar-text">
+                    <a data-toggle="modal" data-target="#loginModal">
+                        <span class="fa fa-sign-in"></span> Login</a>
+                </span>
+
             </div>
         </div>
     </nav>
+
+    <div id="loginModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Login </h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-row">
+                            <div class="form-group col-sm-4">
+                                <label class="sr-only" for="exampleInputEmail3">Email address</label>
+                                <input type="email" class="form-control form-control-sm mr-1" id="exampleInputEmail3"
+                                    placeholder="Enter email">
+                            </div>
+                            <div class="form-group col-sm-4">
+                                <label class="sr-only" for="exampleInputPassword3">Password</label>
+                                <input type="password" class="form-control form-control-sm mr-1"
+                                    id="exampleInputPassword3" placeholder="Password">
+                            </div>
+                            <div class="col-sm-auto">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox">
+                                    <label class="form-check-label"> Remember me
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <button type="button" class="btn btn-secondary btn-sm ml-auto"
+                                data-dismiss="modal">Cancel</button>
+                            <button type="submit" class="btn btn-primary btn-sm ml-1">Sign in</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <header class="jumbotron">
         <div class="container">
@@ -58,7 +104,9 @@
                 </div>
 
                 <div class="col-12 col-sm-3 align-self-center">
-                    <a href="#reservationForm" class="btn btn-warning btn-sm btn-block">Reserve Table</a>
+                    <a role="button" class="btn btn-block nav-link btn-warning" data-toggle="tooltip" data-html="true"
+                        title="Or Call us at  <br><strong>+852 12345678</strong>" data-placement="bottom"
+                        href="#reserveform">Reserve Table</a>
                 </div>
 
             </div>
@@ -66,125 +114,119 @@
     </header>
 
     <div class="container">
-        <div class="row row-content align-items-center">
-            <div class="col-12 col-sm-4 order-sm-last col-md-3">
-                <h3>Our Lipsmacking Culinary Creations</h3>
-            </div>
-            <div class="col col-sm order-sm-first col-md">
-                <div class="media">
-                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/uthappizza.png" alt="uthapizza">
-                    <div class="media-body">
-                        <h2 class="mt-0">Uthappizza <span class="badge badge-danger">HOT</span> <span
-                                class="badge badge-pill badge-secondary">$4.99</span></h2>
-                        <p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola
-                            olives,
-                            ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
+
+        <div class="row row-content">
+            <div class="col">
+                <div id="mycarousel" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner" role="listbox">
+
+                        <div class="carousel-item active">
+                            <img class="d-block img-fluid" src="img/uthappizza.png" alt="uthapizza">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h2>Uthappizza <span class="badge badge-danger">HOT</span> <span
+                                        class="badge badge-pill badge-secondary">$4.99</span></h2>
+                                <p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with
+                                    Cerignola olives, ripe vine cherry tomatoes, Vidalia onion,
+                                    Guntur chillies and Buffalo Paneer.</p>
+                            </div>
+                        </div>
+
+                        <div class="carousel-item">
+                            <img class="d-block img-fluid" src="img/buffet.png" alt="buffet">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h2>Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
+                                <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five
+                                    different salads, six enticing appetizers,
+                                    six main entrees and five choicest desserts. Free flowing bubbly and soft drinks.
+                                    All for just $19.99 per person </p>
+                            </div>
+                        </div>
+
+                        <div class="carousel-item">
+                            <img class="d-block img-fluid" src="img/alberto.png" alt="alberto">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h2>Alberto Somayya</h2>
+                                <h4>Executive Chef</h4>
+                                <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide
+                                    International experience having worked closely with
+                                    whos-who in the culinary world, he specializes in creating mouthwatering
+                                    Indo-Italian fusion experiences. </p>
+                            </div>
+                        </div>
                     </div>
+                    <ol class="carousel-indicators">
+                        <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#mycarousel" data-slide-to="1"></li>
+                        <li data-target="#mycarousel" data-slide-to="2"></li>
+                    </ol>
+                    <a class="carousel-control-prev" href="#mycarousel" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon"></span>
+                    </a>
+                    <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon"></span>
+                    </a>
                 </div>
 
             </div>
         </div>
 
 
-        <div class="row row-content align-items-center">
-            <div class="col-12 col-sm-4 col-md-3">
-                <h3>This Month's Promotions</h3>
-            </div>
-            <div class="col col-sm col-md">
-                <div class="media">
-                    <div class="media-body">
-                        <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
-                        <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five
-                            different salads, six enticing appetizers,
-                            six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for
-                            just $19.99 per person </p>
-                    </div>
-                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/buffet.png" alt="buffet">
-                </div>
 
-            </div>
-        </div>
-
-        <div class="row row-content align-items-center">
-            <div class="col-12 col-sm-4 order-sm-last col-md-3">
-                <h3>Meet our Culinary Specialists</h3>
-            </div>
-            <div class="col col-sm order-sm-first col-md">
-                <div class="media">
-                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/alberto.png" alt="alberto">
-                    <div class="media-body">
-                        <h2 class="mt-0">Alberto Somayya</h2>
-                        <h4>Executive Chef</h4>
-                        <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International
-                            experience having worked
-                            closely with
-                            whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion
-                            experiences. </p>
-
-                    </div>
-                </div>
-
-            </div>
-        </div>
-
-        <div class="row row-content" id="reservationForm">
+        <div class="row row-content" id="reserveform">
             <div class="col-12 col-sm-8 mx-auto">
                 <div class="card">
                     <h3 class="card-header bg-warning text-white mb-3">Reserve a Table</h3>
-                    <form class="ml-4 mr-4 mt-2">
-                        <fieldset class="form-group">
-                          <div class="row">
-                            <legend class="col-form-label col-sm-2 pt-0">Number of Guests</legend>
-                            <div class="col-sm-10">
-                                <div class="custom-control custom-radio custom-control-inline">
-                                    <input type="radio" id="customRadioInline1" name="customRadioInline1" class="custom-control-input">
-                                    <label class="custom-control-label" for="customRadioInline1">1</label>
-                                  </div>
-                                <div class="custom-control custom-radio custom-control-inline">
-                                    <input type="radio" id="customRadioInline2" name="customRadioInline1" class="custom-control-input">
-                                    <label class="custom-control-label" for="customRadioInline2">2</label>
+                    <div class="card-body">
+                        <form>
+                            <div class="form-group row align-self-center mx-auto">
+                                <label for="numguests" class="col-md-2 col-form-label">Number of Guests</label>
+                                <div class="col-1 align-self-center">
+                                    <input class="form-check-input" type="radio" name="numGuests" value="1">
+                                    <label class="form-check-label" for="numGuests1">1</label>
                                 </div>
-                                <div class="custom-control custom-radio custom-control-inline">
-                                    <input type="radio" id="customRadioInline3" name="customRadioInline1" class="custom-control-input">
-                                    <label class="custom-control-label" for="customRadioInline3">3</label>
+                                <div class="col-1 align-self-center">
+                                    <input class="form-check-input" type="radio" name="numGuests" value="2">
+                                    <label class="form-check-label" for="numGuests2">2</label>
                                 </div>
-                                <div class="custom-control custom-radio custom-control-inline">
-                                    <input type="radio" id="customRadioInline4" name="customRadioInline1" class="custom-control-input">
-                                    <label class="custom-control-label" for="customRadioInline4">4</label>
+                                <div class="col-1 align-self-center">
+                                    <input class="form-check-input" type="radio" name="numGuests" value="3">
+                                    <label class="form-check-label" for="numGuests3">3</label>
                                 </div>
-                                <div class="custom-control custom-radio custom-control-inline">
-                                    <input type="radio" id="customRadioInline5" name="customRadioInline1" class="custom-control-input">
-                                    <label class="custom-control-label" for="customRadioInline5">5</label>
+                                <div class="col-1 align-self-center">
+                                    <input class="form-check-input" type="radio" name="numGuests" value="4">
+                                    <label class="form-check-label" for="numGuests4">4</label>
                                 </div>
-                                <div class="custom-control custom-radio custom-control-inline">
-                                    <input type="radio" id="customRadioInline6" name="customRadioInline1" class="custom-control-input">
-                                    <label class="custom-control-label" for="customRadioInline6">6</label>
+                                <div class="col-1 align-self-center">
+                                    <input class="form-check-input" type="radio" name="numGuests" value="5">
+                                    <label class="form-check-label" for="numGuests5">5</label>
+                                </div>
+                                <div class="col-1 align-self-center">
+                                    <input class="form-check-input" type="radio" name="numGuests" value="6">
+                                    <label class="form-check-label" for="numGuests6">6</label>
                                 </div>
                             </div>
-                          </div>
-                        </fieldset>
-                        <div class="form-group row">
-                            <label for="inputEmail3" class="col-sm-2 col-form-label">Date and Time</label>
-                            <div class="col-sm-4">
-                              <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+                            <div class="form-group row align-self-center mx-auto">
+                                <label for="dateandtime" class="col-xs-12 col-md-2 col-form-label">Date and
+                                    Time</label>
+                                <input class="form-control col-xs-5 col-sm-4" type="date" id="date" name="date"
+                                    placeholder="Date">
+                                <input class="form-control col-xs-5 col-sm-4 offset-sm-1" type="time" id="time"
+                                    name="time" placeholder="Time">
                             </div>
-                            <div class="col-sm-4    ">
-                                <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
-                              </div>
-                          </div>
-                        <div class="form-group row">
-                          <div class="col-sm-10 offset-md-2">
-                            <button type="submit" class="btn btn-primary">Reserve</button>
-                          </div>
-                        </div>
-                      </form>
+                            <div class="form-group row align-items-center">
+                                <div class="col-2 offset-2">
+                                    <button type="submit" class="btn btn-primary">Reserve</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
 
         </div>
 
     </div>
-    </div>
+
 
     <footer class="footer">
         <div class="container">
@@ -243,6 +285,11 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
+    <script>
+        $(document).ready(function () {
+            $('[data-toggle="tooltip"]').tooltip();
+        });
+    </script>
 </body>
 
 </html>
