--- a/index.html
+++ b/index.html
@@ -89,6 +89,77 @@
         </div>
     </div>
 
+    <div id="reserveModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Reserve a Table </h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group row align-self-center mx-auto">
+                            <label for="numguests" class="col-md-2 col-form-label">Number of Guests</label>
+                            <div class="col-1 align-self-center">
+                                <input class="form-check-input" type="radio" name="numGuests" value="1">
+                                <label class="form-check-label" for="numGuests1">1</label>
+                            </div>
+                            <div class="col-1 align-self-center">
+                                <input class="form-check-input" type="radio" name="numGuests" value="2">
+                                <label class="form-check-label" for="numGuests2">2</label>
+                            </div>
+                            <div class="col-1 align-self-center">
+                                <input class="form-check-input" type="radio" name="numGuests" value="3">
+                                <label class="form-check-label" for="numGuests3">3</label>
+                            </div>
+                            <div class="col-1 align-self-center">
+                                <input class="form-check-input" type="radio" name="numGuests" value="4">
+                                <label class="form-check-label" for="numGuests4">4</label>
+                            </div>
+                            <div class="col-1 align-self-center">
+                                <input class="form-check-input" type="radio" name="numGuests" value="5">
+                                <label class="form-check-label" for="numGuests5">5</label>
+                            </div>
+                            <div class="col-1 align-self-center">
+                                <input class="form-check-input" type="radio" name="numGuests" value="6">
+                                <label class="form-check-label" for="numGuests6">6</label>
+                            </div>
+                        </div>
+
+                        <div class="form-group row align-self-center mx-auto">
+                            <label for="section" class="col-xs-12 col-md-2 col-form-label">Section</label>
+                            <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                                <label class="btn btn-success active">
+                                    <input type="radio" name="options" id="option1" autocomplete="off" checked>
+                                    Non-smoking
+                                </label>
+                                <label class="btn btn-danger">
+                                    <input type="radio" name="options" id="option2" autocomplete="off"> Smoking
+                                </label>
+                            </div>
+                        </div>
+
+                        <div class="form-group row align-self-center mx-auto">
+                            <label for="dateandtime" class="col-xs-12 col-md-2 col-form-label">Date and
+                                Time</label>
+                            <input class="form-control col-xs-5 col-sm-4" type="date" id="date" name="date"
+                                placeholder="Date">
+                            <input class="form-control col-xs-5 col-sm-4 offset-sm-1" type="time" id="time" name="time"
+                                placeholder="Time">
+                        </div>
+                        <div class="form-group row align-items-center">
+                            <div class="col-4 offset-2">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                                <button type="submit" class="btn btn-primary">Reserve</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
@@ -104,9 +175,8 @@
                 </div>
 
                 <div class="col-12 col-sm-3 align-self-center">
-                    <a role="button" class="btn btn-block nav-link btn-warning" data-toggle="tooltip" data-html="true"
-                        title="Or Call us at  <br><strong>+852 12345678</strong>" data-placement="bottom"
-                        href="#reserveform">Reserve Table</a>
+                    <a role="button" class="btn btn-block nav-link btn-warning" data-toggle="modal"
+                        data-target="#reserveModal">Reserve Table</a>
                 </div>
 
             </div>
@@ -165,65 +235,19 @@
                     <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
                         <span class="carousel-control-next-icon"></span>
                     </a>
-                </div>
-
-            </div>
-        </div>
-
-
-
-        <div class="row row-content" id="reserveform">
-            <div class="col-12 col-sm-8 mx-auto">
-                <div class="card">
-                    <h3 class="card-header bg-warning text-white mb-3">Reserve a Table</h3>
-                    <div class="card-body">
-                        <form>
-                            <div class="form-group row align-self-center mx-auto">
-                                <label for="numguests" class="col-md-2 col-form-label">Number of Guests</label>
-                                <div class="col-1 align-self-center">
-                                    <input class="form-check-input" type="radio" name="numGuests" value="1">
-                                    <label class="form-check-label" for="numGuests1">1</label>
-                                </div>
-                                <div class="col-1 align-self-center">
-                                    <input class="form-check-input" type="radio" name="numGuests" value="2">
-                                    <label class="form-check-label" for="numGuests2">2</label>
-                                </div>
-                                <div class="col-1 align-self-center">
-                                    <input class="form-check-input" type="radio" name="numGuests" value="3">
-                                    <label class="form-check-label" for="numGuests3">3</label>
-                                </div>
-                                <div class="col-1 align-self-center">
-                                    <input class="form-check-input" type="radio" name="numGuests" value="4">
-                                    <label class="form-check-label" for="numGuests4">4</label>
-                                </div>
-                                <div class="col-1 align-self-center">
-                                    <input class="form-check-input" type="radio" name="numGuests" value="5">
-                                    <label class="form-check-label" for="numGuests5">5</label>
-                                </div>
-                                <div class="col-1 align-self-center">
-                                    <input class="form-check-input" type="radio" name="numGuests" value="6">
-                                    <label class="form-check-label" for="numGuests6">6</label>
-                                </div>
-                            </div>
-                            <div class="form-group row align-self-center mx-auto">
-                                <label for="dateandtime" class="col-xs-12 col-md-2 col-form-label">Date and
-                                    Time</label>
-                                <input class="form-control col-xs-5 col-sm-4" type="date" id="date" name="date"
-                                    placeholder="Date">
-                                <input class="form-control col-xs-5 col-sm-4 offset-sm-1" type="time" id="time"
-                                    name="time" placeholder="Time">
-                            </div>
-                            <div class="form-group row align-items-center">
-                                <div class="col-2 offset-2">
-                                    <button type="submit" class="btn btn-primary">Reserve</button>
-                                </div>
-                            </div>
-                        </form>
+                    <div class="btn-group" id="carouselButton">
+                        <button class="btn btn-danger btn-sm" id="carousel-pause">
+                            <span class="fa fa-pause"></span>
+                        </button>
+                        <button class="btn btn-danger btn-sm" id="carousel-play">
+                            <span class="fa fa-play"></span>
+                        </button>
                     </div>
                 </div>
-            </div>
 
+            </div>
         </div>
+
 
     </div>
 
@@ -285,11 +309,18 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
-    <script>
-        $(document).ready(function () {
-            $('[data-toggle="tooltip"]').tooltip();
-        });
-    </script>
+        <script>
+                $(document).ready(function(){
+                    $("#mycarousel").carousel( { interval: 2000 } );
+                    $("#carousel-pause").click(function(){
+                        $("#mycarousel").carousel('pause');
+                    });
+                    $("#carousel-play").click(function(){
+                        $("#mycarousel").carousel('cycle');
+                    });
+                });
+            </script>
+
 </body>
 
 </html>
